--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,7 @@
       <div class="card social-block">
         <div class="card-body">
           <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
+            <i class="fab fa-google add-margin"></i>
             Sign Up with Google
           </a>
         </div>
