--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,3 +14,9 @@ body {
   color: #fff;
   background-color: #000;
 }
+
+.add-margin{
+  margin-top:10px;
+  margin-right: 7px;
+  margin-left: 2px;
+}
